--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Baby I'm so sorry</h1>
 
     <p>
-      I know I hurt you pa - and I wish I can undo that pa :(, and I'm so so sorry alexia baby please come back to me.
+      I know I hurt you pa - and I wish I can undo that pa :(, and I'm so so sorry alexia baby please come back to me.   <strong> I have eyes only for you my love.</strong>
       You're the only girl in my eyes and the most beautiful girl ever. Please come back to me my wife.  
       <strong>I’m sorry. I miss you. I love you so so much.</strong>
     </p>
@@ -32,7 +32,7 @@
 
     <p>
       <strong>Please let me right my wrongs baby.</strong>I hope you’re sleeping okay and eating well.
-      And if any part of you still believes we can fix this, please come back. Just know I'm always gonna be here ❤️.
+      And if any part of you still believes we can fix this, please come back. Just know I'm always gonna be here for you sayangku ❤️.
     </p>
   </div>
 
